--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 contourpy==1.1.0
 cycler==0.11.0
 fonttools==4.40.0
-jsonlib-python3==1.6.1
 kiwisolver==1.4.4
 matplotlib==3.7.1
 numpy==1.25.0
@@ -16,3 +15,4 @@ seaborn==0.12.2
 six==1.16.0
 tzdata==2023.3
 xmltodict==0.13.0
+requests~=2.31.0
